src/app/course/course-home/course-home.component.scss
.title-row {
  display: flex;
  align-items: center;
  justify-content: space-between;

  h1 {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

.recent-item-bar {
  display: flex;

  margin-top: 0.75rem;
  margin-bottom: 2rem;
  padding-bottom: 0.75rem;
  width: 100%;

  overflow: auto;

  > * {
    display: flex;
    flex-direction: column;

    flex: 1 1;
    min-height: 80px;
    min-width: 180px;

    position: relative;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    transition-duration: 0.5s;
    transition-delay: 0.1s;

    h5, p {
      margin: 0;
      text-overflow: ellipsis;
      overflow: hidden;
    }

    em {
      display: flex;
      justify-content: space-between;
      margin: 3px 0;
      font-size: 0.9rem;

      .late {
        color: var(--error);
      }
    }

    blockquote {
      border-left: var(--accent-primary) 2px solid;
      margin: 0;
      margin-top: 10px;
      padding-left: 10px;
      font-size: 0.9rem;
      max-width: 100%;
      
      text-overflow: ellipsis;
      overflow: hidden;
    }

    svg {
      position: absolute;
      bottom: 1rem;
      right: 1rem;
    }

    &:not(:last-child) {
      margin-right: 0.75rem;
    }
  }
}

h2 {
  font-size: 1.25rem;
  font-weight: normal;
  text-transform: uppercase;
}

.quick-access {
  display: flex;
  column-gap: 0.75rem;
  margin-top: 0.75rem;
  margin-bottom: 1rem;

  a {
    min-width: 100px;
  }
}

.error {
  color: var(--error);
}

